--- a/Flower Shop Template/index.html
+++ b/Flower Shop Template/index.html
@@ -685,7 +685,7 @@
                   </p>
 
                   <div class="d-flex justify-content-center">
-                    <img src="./p20.png" alt="" />
+                    <img src="./images/p20.jpg" alt="" />
                   </div>
 
                   <p class="text-center fst-italic">florist, Mary Byrd</p>
