--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -14,6 +14,16 @@
     <title>Gallery</title>
   </head>
   <body>
+
+    <section>
+      <button class="rounded-circle" onclick="topFunction()" id="myBtn" title="Go to top">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+        </svg>
+      </button>
+    </section>
+  
+
     <section class="sticky-top">
       <nav class="col-12 navbar navbar-expand-lg navbar-dark mb-5 CustomNavBar">
         <div class="container-fluid">
@@ -685,7 +695,7 @@
                   </p>
 
                   <div class="d-flex justify-content-center">
-                    <img src="./p20.png" alt="" />
+                    <img src="./images/p20.png" alt="" />
                   </div>
 
                   <p class="text-center fst-italic">florist, Mary Byrd</p>
@@ -857,5 +867,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./ScrollToTopBtn.js"></script>
   </body>
 </html>
