Add a media query and some other small changes

--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -14,7 +14,7 @@
     <title>Gallery</title>
   </head>
   <body>
-    <section>
+    <section class="ScrollToTopBtn">
       <button
         class="rounded-circle"
         onclick="topFunction()"
