--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -707,7 +707,7 @@
                   </p>
 
                   <div class="d-flex justify-content-center">
-                    <img src="./p20.png" alt="" />
+                    <img src="./images/p20.png" alt="" />
                   </div>
 
                   <p class="text-center fst-italic">florist, Mary Byrd</p>
