--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -36,24 +36,28 @@
       </button>
     </section>
 
-    <section class="sticky-top">
-      <nav class="col-12 navbar navbar-expand-lg navbar-dark mb-5 CustomNavBar">
-        <div class="container-fluid">
-          <span class="navbar-brand me-lg-5 FontStyle1NavBrand" href="#"
-            ><em>Special prices for orders over $150</em></span
-          >
+    <section>
+      <header id="navbar-css">
+        <nav class="navbar-container-css container-css">
+          <a href="/" class="home-link-css">
+            <div class="navbar-logo-css"></div>
+            <em>Special prices for orders over $150</em>
+          </a>
           <button
-            class="navbar-toggler"
             type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
+            id="navbar-toggle-css"
+            aria-controls="navbar-menu-css"
+            aria-label="Toggle menu-css"
+            aria-expanded="false"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="icon-bar-css"></span>
+            <span class="icon-bar-css"></span>
+            <span class="icon-bar-css"></span>
           </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link ms-lg-5 FontStyle1NavItem" href="#">
+          <div id="navbar-menu-css" aria-labelledby="navbar-toggle-css">
+            <ul class="navbar-links-css">
+              <li class="navbar-item-css">
+                <a class="navbar-link-css" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -69,8 +73,8 @@
                   email@site.com</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link FontStyle1NavItem" href="#">
+              <li class="navbar-item-css">
+                <a class="navbar-link-css" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -87,8 +91,8 @@
                   +(123) 456-7890</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link FontStyle1NavItem" href="#">
+              <li class="navbar-item-css">
+                <a class="navbar-link-css" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -106,8 +110,8 @@
               </li>
             </ul>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     </section>
 
     <section class="pb-5">
@@ -879,6 +883,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./navbar.js"></script>
     <script src="./ScrollToTopBtn.js"></script>
   </body>
 </html>
