--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -879,6 +879,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./NabBarBtn.js"></script>
     <script src="./ScrollToTopBtn.js"></script>
   </body>
 </html>
