--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -36,30 +36,34 @@
       </button>
     </section>
 
-    <section class="sticky-top">
-      <nav class="col-12 navbar navbar-expand-lg navbar-dark mb-5 CustomNavBar">
-        <div class="container-fluid">
-          <span class="navbar-brand me-lg-5 FontStyle1NavBrand" href="#"
-            ><em>Special prices for orders over $150</em></span
-          >
+   <section>
+    <header id="navbar">
+        <nav class="navbar-container containercss">
+          <a href="#" class="home-link">
+            <div class="navbar-logo"></div>
+            <em>Special prices for orders over $150</em>
+          </a>
           <button
-            class="navbar-toggler"
             type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
+            id="navbar-toggle"
+            aria-controls="navbar-menu"
+            aria-label="Toggle menu"
+            aria-expanded="false"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link ms-lg-5 FontStyle1NavItem" href="#">
+          <div id="navbar-menu" aria-labelledby="navbar-toggle">
+            <ul class="navbar-links">
+              <li class="navbar-item">
+                <a class="navbar-link" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-envelope-fill"
+                    class="bi bi-envelope-fill navsvg"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -69,14 +73,14 @@
                   email@site.com</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link FontStyle1NavItem" href="#">
+              <li class="navbar-item">
+                <a class="navbar-link" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-telephone-fill"
+                    class="bi bi-telephone-fill navsvg"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -87,14 +91,14 @@
                   +(123) 456-7890</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link FontStyle1NavItem" href="#">
+              <li class="navbar-item">
+                <a class="navbar-link" href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-geo-alt-fill"
+                    class="bi bi-geo-alt-fill navsvg"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -106,9 +110,9 @@
               </li>
             </ul>
           </div>
-        </div>
-      </nav>
-    </section>
+        </nav>
+      </header>
+   </section>
 
     <section class="pb-5">
       <div class="container">
@@ -879,6 +883,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./NabBarBtn.js"></script>
     <script src="./ScrollToTopBtn.js"></script>
   </body>
 </html>
