--- a/FlowerShopTemplate/index.html
+++ b/FlowerShopTemplate/index.html
@@ -36,8 +36,8 @@
       </button>
     </section>
 
-   <section>
-    <header id="navbar">
+    <section>
+      <header id="navbar">
         <nav class="navbar-container containercss">
           <a href="#" class="home-link">
             <div class="navbar-logo"></div>
@@ -112,11 +112,13 @@
           </div>
         </nav>
       </header>
-   </section>
+    </section>
 
-   
+    <section>
+      <div class="FixOverlap"></div>
+    </section>
 
-    <section class="pb-5">
+    <section class="mt-5 pb-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -169,7 +171,7 @@
                 </svg>
                 <h4 class="mt-3">
                   Fastest delivery<br /><span class="FontStyle1"
-                    >Great flavour</span
+                    >No. 1 in the city</span
                   >
                 </h4>
               </div>
